--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,15 @@
         body {
             padding-top: 5rem;
         }
+        .nav-item form .btn.nav-link {
+            background: none;
+            border: none;
+            padding: 0.5rem 0;
+            color: rgba(255, 255, 255, 0.55);
+        }
+        .nav-item form .btn.nav-link:hover {
+            color: rgba(255, 255, 255, 0.75);
+        }
     </style>
     {% block extra_css %}{% endblock %}
 </head>
@@ -45,7 +54,10 @@
                             <span class="nav-link">Welcome, {{ user.get_full_name|default:user.username }}</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            <form method="post" action="{% url 'logout' %}" class="d-inline">
+                                {% csrf_token %}
+                                <button type="submit" class="btn nav-link">Logout</button>
+                            </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
